card price color fixed

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </div>
         </div>
 
-        <div class="card__main">
+        <div class="card__main special">
           <h2 class="special">best value</h2>
           <div class="card__content">
             <div class="card__price">
