--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
       </div>
     </section>
 
+    <footer>
+      <p>This website is developed by <span>iamernesto14</span></p>
+    </footer>
     </div>
     
   </body>
